--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ images:
    gallery-folder: /img/slider/
  - image_path: /img/slider/home02.jpg
    gallery-folder: /img/slider/
- - image_path: /img/slider/home03.jpg
-   gallery-folder: /img/slider/
 ---
+ <!-- - image_path: /img/slider/home03.jpg -->
+ <!--   gallery-folder: /img/slider/ -->
 
 
 <html class="no-js" lang="en">
