added slider photo

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ images:
    gallery-folder: /img/slider/
  - image_path: /img/slider/home02.jpg
    gallery-folder: /img/slider/
+ - image_path: /img/slider/home03.jpg
+   gallery-folder: /img/slider/
 ---
- <!-- - image_path: /img/slider/home03.jpg -->
- <!--   gallery-folder: /img/slider/ -->
 
 
 <html class="no-js" lang="en">
@@ -60,8 +60,10 @@ images:
 				<figure class="gallery-item">
 					<header class='gallery-icon'>
 
-<a href="{{ site.url }}{{ site.baseurl }}{{ image.gallery-folder }}">
-<img src="{{ site.url }}{{ site.baseurl }}{{ image.image_path }}"></a>
+<!-- <a href="{{ site.url }}{{ site.baseurl }}{{ image.gallery-folder }}"> -->
+<!-- <img src="{{ site.url }}{{ site.baseurl }}{{ image.image_path }}"></a> -->
+<a href="{{ site.baseurl }}{{ image.gallery-folder }}">
+<img src="{{ site.baseurl }}{{ image.image_path }}"></a>
 
 				</header>
 				</figure>
