--- a/gallery/index.html
+++ b/gallery/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "GALLERY"
-<!-- description: "archive" -->
+description: ""
 active: gallery
 header-img: "img/gallery-bg.jpg"
 images:
